--- a/src/avgs.css
+++ b/src/avgs.css
@@ -5,9 +5,9 @@ a {
 
 a:hover 
 {
-     color:#DD52A9; 
-     text-decoration:none; 
-     cursor:pointer;  
+    color:#DD52A9; 
+    text-decoration:none; 
+    cursor:pointer;  
 }
 
 #result-name {
@@ -15,28 +15,44 @@ a:hover
 }
 
 #result-chart {
-    stroke: #0D5285;
+    stroke: blue;
     color: #FFFFFF;
 }
 #result-chart2 {
-    stroke: #DE123A;
+    stroke: red;
     color: #FFFFFF;
     position: relative;
-    left: 0px;
-    bottom: 280px;
+    left: 40px;
+    bottom: 400px;
 }
 
 .result-chart {
-    height: 280px;
+    height: 400px;
 }
 
 .ct-grids line {
-  color: #FFFFFF;
+   color: #FFFFFF;
 }
 
 .ct-labels span {
-  color: #FFFFFF;
-  font-size: 16px;
+   color: #FFFFFF;
+   font-size: 16px;
+}
+
+.ct-series-a .ct-line {
+  stroke: blue;
+}
+
+.ct-series-b .ct-line {
+  stroke: green;
+}
+
+.ct-series-a .ct-point {
+  stroke: blue;
+}
+
+.ct-series-b .ct-point {
+  stroke: green;
 }
 
 #main {
@@ -60,8 +76,8 @@ a:hover
 }
 
 #main div {
-	font-size: 24px;
-	color: #FFFFFF;
+	 font-size: 24px;
+	 color: #FFFFFF;
 }
 
 #info {
@@ -75,14 +91,14 @@ a:hover
 }
 
 #intro h1 {
-	color: #DD5285;
+	 color: #DD5285;
 }
 
 #intro p {
-	color: #FFFFFF;
-	font-size: 1em;
+	 color: #FFFFFF;
+	 font-size: 1em;
 }
 
 .form-inline {
-	color: #DD5285;
+	 color: #DD5285;
 }
