--- a/src/avgs.css
+++ b/src/avgs.css
@@ -1,3 +1,7 @@
+body {
+    background-color: #222222;
+}
+
 a {
     color: inherit;
     text-decoration: none;
@@ -10,6 +14,8 @@ a:hover
     cursor:pointer;  
 }
 
+
+/* CHART STUFF */
 #result-name {
     color: #FFFFFF;
 }
@@ -29,6 +35,8 @@ a:hover
 .result-chart {
     height: 400px;
 }
+
+/* CHARTIST STUFF */
 
 .ct-grids line {
    color: #FFFFFF;
@@ -54,6 +62,7 @@ a:hover
 .ct-series-b .ct-point {
   stroke: green;
 }
+
 
 #main {
     margin-top:20px;
@@ -91,7 +100,8 @@ a:hover
 }
 
 #intro h1 {
-	 color: #DD5285;
+     color: #DD5285;
+     font-family: titleFont;
 }
 
 #intro p {
@@ -101,4 +111,39 @@ a:hover
 
 .form-inline {
 	 color: #DD5285;
+}
+
+#authorize-button {
+    position: fixed;
+    height: 4em;
+    width: 4em;
+    right: 5%;
+    bottom: 5%;
+    border-radius: 100%;
+    background-color: #DD5285;
+}
+#authorize-button:hover {
+    cursor: pointer;
+    height: 4.20em;
+    width: 4.20em;
+}
+
+#authorize-text {
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+
+    color: #111111;
+    margin: auto 0;
+    text-align: center;
+    font-size: 0.50em;
+    font-weight: 600;
+}
+
+@font-face {
+    font-family: titleFont;
+    src: url(res/agentcyr.ttf);
 }
