--- a/src/avgs.css
+++ b/src/avgs.css
@@ -90,8 +90,21 @@ input:focus{
 .result-button {
     display: table;
     padding: 5px;
-    font-size: 2vw;
     margin-bottom: 10px;
+    background: transparent;
+    border: 1px solid #4F4F4F;
+    width: 100%;
+}
+
+.result-button p {
+    font-size: 1.5vw;    
+}
+
+.result-button img {
+    width: 10vw;
+    height: 10vw;
+    float: left;
+    margin: 10px;
 }
 
 select {
