--- a/src/avgs.css
+++ b/src/avgs.css
@@ -1,5 +1,11 @@
 body {
     background-color: #222222;
+    font-family: 'Overpass Mono'
+}
+
+h1 {
+    margin-top: 2vh;
+    margin-bottom: 2vh;
 }
 
 a {
@@ -14,22 +20,30 @@ a:hover
     cursor:pointer;  
 }
 
-
-.butt {
-    border: 2px solid rgba(255,255,255,.5);
-    border-radius: .3vw;
+button {
+    border: 0;
     color: white;
-    background-color: gray;
+    background-color: rgb(85, 85, 85);
+    white-space: nowrap;
+    text-decoration: none;
+    padding: 0.25rem 0.5rem;
+    margin: 0.25rem;
+    font-family: "Overpass Mono";
     cursor: pointer;
 }
 
-#main {
+#page-container {
+    position: relative;
+}
+
+main {
     margin-top:5vh;    
     margin: auto;
     width:90%;
     font-size:2vw;
     color: #FFFFFF;
-    min-height: calc(100vh - 120px);
+    padding-bottom: 2.5rem;
+    min-height: calc(100vh - 150px);
 }
 
 #intro {
@@ -54,17 +68,24 @@ a:hover
     
 }
 
-#search {
+#search-bar {
     margin: auto;
+    text-align: center;
 }
 
 #search-results {
     margin-top: 5vh;
 }
 
+#search-button {
+    background: none;
+    font-size: 2.5vw;
+}
+
 input {
 	border:2px solid rgba(255,255,255,.5);
-	font-size: 2.3vw;
+    font-size: 2.3vw;
+    font-family: "Overpass Mono";
 	padding:.1vw .6vw .15vw;
 	color:rgba(255,255,255,.5);
 	border-radius:.5vw;
@@ -72,46 +93,40 @@ input {
 	transition: all .200s;
 }
 
-input:focus{
+input:focus {
     outline: none;
     color:rgba(255,255,255,.75);
     border-color: #DD5285;
 }
 
-#search-button {
-    font-weight: 200;
-    margin-left: 10px;
-    display: inline;
-}
-
-#search-button:hover {
-    cursor: pointer;
+#result-buttons {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-column-gap: 20px;
+    justify-content: space-between;
+    align-content: start;
+    justify-items: stretch;
+    align-items: stretch;
 }
 
 .result-button {
-    display: table;
-    padding: 5px;
     margin-bottom: 10px;
     background: transparent;
-    border: 1px solid #4F4F4F;
     width: 100%;
-}
-
-.result-button div {
-    font-size: 1.5vw;
-    display: table-cell;
-    vertical-align: middle;
-    text-align: right;
-    padding-right: 10px;
+    font-size: 1.3vw;
+    text-align: left;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    background: #333333;
+    border-radius: 5px;
 }
 
 .result-button img {
+    max-height: 10vw;
     width: 10vw;
-    height: 10vw;
-    float: left;
-    margin: 10px;
-    display: table-cell; 
-    vertical-align: middle
+    margin: 5px;
+    padding-right: 10px;
 }
 
 select {
@@ -130,8 +145,10 @@ select {
 
 footer {
     margin-top: 20px;
-    height: 50px;
-    width: 100%;
+    margin: auto;
+    bottom: 0;
+    height: 2.5rem;
+    width: 98%;
     color: white;
     text-align: center;
   }
@@ -141,13 +158,12 @@ footer {
 #authorize-button {
     height: 2.5vw;
     width: 20%;
-    margin: auto;    
-    border-radius: 20%;
+    margin: auto;
     background-color: #DD5285;
     color: white;
     text-align: center;
-    text-decoration: none;
-    font-size: 1.5vw;
+    font-size: 1.8vw;
+    display: block;
 }
 
 #authorize-button:hover {
@@ -156,23 +172,11 @@ footer {
 
 /* CHART STUFF */
 #result-name {
-    font-size: 3vw;
+    font-size: 2vw;
     margin: 40px;
-    margin-left: 0px;
     color: #FFFFFF;
-}
-
-#result-chart {
-    stroke: blue;
-    color: #FFFFFF;
-}
-
-#result-chart2 {
-    stroke: red;
-    color: #FFFFFF;
-    position: relative;
-    left: 40px;
-    bottom: 50vh;
+    text-align: center;
+    margin-bottom: 0;
 }
 
 .result-chart {
